--- a/customer/package.json
+++ b/customer/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.2",
     "@types/react": "^18.0.23",
+    "@types/react-bootstrap": "^0.32.31",
     "@types/react-dom": "^18.0.7",
     "bootstrap": "^5.2.2",
     "lottie-react": "^2.3.1",
