--- a/customer/package.json
+++ b/customer/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tanstack/react-query": "^4.14.1",
+    "@tanstack/react-query-devtools": "^4.14.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,6 +13,7 @@
     "@types/react": "^18.0.23",
     "@types/react-bootstrap": "^0.32.31",
     "@types/react-dom": "^18.0.7",
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "lottie-react": "^2.3.1",
     "react": "^18.2.0",
