--- a/rider/package.json
+++ b/rider/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,18 +11,24 @@
     "@types/node": "^16.18.2",
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "http-build-query": "^0.7.0",
     "lottie-react": "^2.3.1",
+    "md5": "^2.3.0",
     "react": "^18.2.0",
+    "react-auth-kit": "^2.7.0",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.9.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.2",
+    "react-hook-form": "^7.39.3",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
     "swiper": "^8.4.4",
     "typescript": "^4.8.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
