--- a/rider/package.json
+++ b/rider/package.json
@@ -16,6 +16,7 @@
     "http-build-query": "^0.7.0",
     "lottie-react": "^2.3.1",
     "md5": "^2.3.0",
+    "mdb-react-ui-kit": "^5.0.0",
     "react": "^18.2.0",
     "react-auth-kit": "^2.7.0",
     "react-bootstrap": "^2.5.0",
