--- a/rider/package.json
+++ b/rider/package.json
@@ -26,6 +26,7 @@
     "react-images-uploading": "^3.1.7",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-slider-swiper": "^2.0.6",
     "sass": "^1.55.0",
     "swiper": "^8.4.4",
     "typescript": "^4.8.4",
