--- a/rider/package.json
+++ b/rider/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.7",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "framer-motion": "^7.6.7",
     "http-build-query": "^0.7.0",
     "lottie-react": "^2.3.1",
     "md5": "^2.3.0",
