--- a/customer/package.json
+++ b/customer/package.json
@@ -25,6 +25,7 @@
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.9.1",
     "react-dom": "^18.2.0",
+    "react-google-places-autocomplete": "^3.4.0",
     "react-hook-form": "^7.39.1",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
