--- a/rider/package.json
+++ b/rider/package.json
@@ -13,11 +13,14 @@
     "@types/react-dom": "^18.0.7",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
     "framer-motion": "^7.6.7",
     "http-build-query": "^0.7.0",
     "lottie-react": "^2.3.1",
     "md5": "^2.3.0",
     "mdb-react-ui-kit": "^5.0.0",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-auth-kit": "^2.7.0",
     "react-bootstrap": "^2.5.0",
@@ -35,6 +38,7 @@
     "yup": "^0.32.11"
   },
   "scripts": {
+    "start-test": "npm run build && node ./server",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
