--- a/customer/package.json
+++ b/customer/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
+    "@reach/combobox": "^0.18.0",
+    "@react-google-maps/api": "^2.17.0",
     "@tanstack/react-query": "^4.14.1",
     "@tanstack/react-query-devtools": "^4.14.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -32,6 +34,7 @@
     "sass": "^1.55.0",
     "swiper": "^8.4.4",
     "typescript": "^4.8.4",
+    "use-places-autocomplete": "^4.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
