--- a/rider/package.json
+++ b/rider/package.json
@@ -21,6 +21,8 @@
     "md5": "^2.3.0",
     "mdb-react-ui-kit": "^5.0.0",
     "multer": "^1.4.5-lts.1",
+    "pusher": "^5.1.1-beta",
+    "pusher-js": "^7.5.0",
     "react": "^18.2.0",
     "react-auth-kit": "^2.7.0",
     "react-bootstrap": "^2.5.0",
