--- a/rider/package.json
+++ b/rider/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
+    "@rsuite/charts": "^5.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,8 +14,11 @@
     "@types/react-dom": "^18.0.7",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "cdbreact": "^1.5.3",
+    "chart.js": "^4.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "faker": "^6.6.6",
     "framer-motion": "^7.6.7",
     "http-build-query": "^0.7.0",
     "lottie-react": "^2.3.1",
@@ -27,6 +31,7 @@
     "react-auth-kit": "^2.7.0",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.9.1",
+    "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.3",
     "react-images-uploading": "^3.1.7",
